--- a/packages/firebase_messaging/firebase_messaging/pubspec.yaml
+++ b/packages/firebase_messaging/firebase_messaging/pubspec.yaml
@@ -4,6 +4,7 @@ description: Flutter plugin for Firebase Cloud Messaging, a cross-platform
 homepage: https://firebase.google.com/docs/cloud-messaging
 repository: https://github.com/firebase/flutterfire/tree/master/packages/firebase_messaging/firebase_messaging
 version: 14.6.5
+publish_to: none
 
 false_secrets:
   - example/**
