--- a/packages/firebase_messaging/firebase_messaging/pubspec.yaml
+++ b/packages/firebase_messaging/firebase_messaging/pubspec.yaml
@@ -10,7 +10,7 @@ false_secrets:
   - example/**
 
 environment:
-  sdk: '>=2.18.0 <4.0.0'
+  sdk: ">=2.12.0 <3.0.0"
   flutter: '>=3.3.0'
 
 dependencies:
